[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/animation/the cats/blue-sheet.png" type="Texture" id=1]
[ext_resource path="res://Entities/Player/Player_FSM.gd" type="Script" id=2]
[ext_resource path="res://Entities/Player/Player_Main.gd" type="Script" id=3]
[ext_resource path="res://Audio/snd_walk.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/snd_jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/particle_dust.png" type="Texture" id=19]
[ext_resource path="res://Entities/Player/Particle.gd" type="Script" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.5074, 64 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.001
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump_fall"
length = 0.166667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump_rise"
length = 0.166667
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.208334
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 24 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Audio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0, 0.125 )
}

[sub_resource type="Animation" id=6]
resource_name = "Tinker_loop"
length = 0.333333
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Tinker_start"
length = 0.25
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Tinker_loop", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform bool make_white = false;
uniform float trans = 1.0;

void fragment(){
	COLOR = make_white ? mix(texture(TEXTURE,UV),vec4(vec3(1.0),texture(TEXTURE,UV).a),trans) : texture(TEXTURE,UV);
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/make_white = false
shader_param/trans = 1.0

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.804356 ), 0.0, -0.443852, 0, 1, Vector2( 1, 0.360504 ), -0.443852, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
length = 0.166667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D" groups=[
"GameObject",
"Player",
]]
collision_layer = 2
script = ExtResource( 3 )
enable_x_limit = false

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -64 )
shape = SubResource( 1 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="1" type="RayCast2D" parent="Raycasts"]
position = Vector2( -32, 0 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="2" type="RayCast2D" parent="Raycasts"]
enabled = true
cast_to = Vector2( 0, 15 )

[node name="3" type="RayCast2D" parent="Raycasts"]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 15 )

[node name="JumpTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Jump_fall = SubResource( 3 )
anims/Jump_rise = SubResource( 4 )
anims/Run = SubResource( 5 )
anims/Tinker_loop = SubResource( 6 )
anims/Tinker_start = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 0, -67 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
vframes = 6
hframes = 5

[node name="Dust" type="CPUParticles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 15
lifetime = 0.25
one_shot = true
explosiveness = 0.42
local_coords = false
texture = ExtResource( 19 )
emission_shape = 2
emission_rect_extents = Vector2( 22.75, 0 )
direction = Vector2( 0, -0.2 )
spread = 3.36
gravity = Vector2( 0, 0 )
initial_velocity = 131.5
scale_amount_curve = SubResource( 10 )
color_ramp = SubResource( 11 )
script = ExtResource( 20 )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Audio2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Audio3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Invincibility" type="AnimationPlayer" parent="."]
autoplay = "DISABLE"
anims/DISABLE = SubResource( 12 )
anims/ENABLE = SubResource( 13 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
